# healthai-etl

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  cron_kaggle.bat  cron_kaggle.sh  docker-compose.yml  package-lock.json  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0a1575b8de86_initial_healthai_migration.py  0d1e2e25e372_initial_migration.py  1b1a5a6b1c3b_initial_migration.py  23df462e9ef6_ajout_eau_aliment.py  4006310975fb_initial_sync_models.py  4006310975fb_initial_sync_models.py.disabled  4279a143b14f_water_units_refactoring.py  555f5e9e3276_update_profil_sante_schema.py  65ac16a6dd0c_add_import_anomalies_tables.py  7a750fef47b6_modif_limit_type_pourcentage_gras_.py  8a1c2d3e4f5a_add_etl_log_table.py  9b2d3e4f5a6b_drop_anomalies_tables.py  a3dc0292f773_.py  a5dbe498dd3c_add_import_dataset_tables.py  ad126df3a10e_initial_migration.py  b1567865a2a9_fix_numeric_precision.py  fd19c9e39d82_fix_numeric_precision_for_dataset_.py
data/clean/: exercisedb_hobby_20260409_065718.csv  exercisedb_hobby_anomalies_20260409_065718.csv
data/raw/: exercisedb_hobby.json  test-exercice.json
notebooks/: 01_exploration.ipynb  02_read_clean.ipynb  03_read_clean copy.ipynb  03_read_clean_V2.ipynb
src/: main.py  run_pipeline.py  server.py
src/auth/: dependencies.py  jwks.py
src/data_pipeline/: database.py  models.py  pipeline.py  seed.py
src/data_pipeline/downloader/: __init__.py  (+2 more)
src/utils/: logger.py
tests/: test_auth.py  test_cleaners.py  test_pipeline.py  test_server.py  test_validators.py
(+8 files in other folders)
