[project]
name = "etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pandas>=2.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.18.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
]

[dependency-groups]
dev = [
    "ruff>=0.15.6",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.ruff]
exclude = ["notebooks/"]
